add timeout [no test]

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build:
     runs-on: [self-hosted, linux]
+    timeout-minutes: 5
 
     outputs:
       VERSION: ${{ steps.get_version.outputs.VERSION }}
@@ -94,6 +95,7 @@ jobs:
     if: "! (contains(github.event.inputs.build_only, 'true'))"
     needs: [build]
     runs-on: ${{ matrix.runner }}
+    timeout-minutes: 20
 
     strategy:
       fail-fast: true
