--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -15,6 +15,7 @@ jobs:
   build:
     if: "! (contains(github.event.head_commit.message, '[skip ci]') || contains(github.event.head_commit.message, '[bump]'))"
     runs-on: [self-hosted, linux]
+    timeout-minutes: 5
     needs: [bump]
 
     steps:
@@ -60,6 +61,7 @@ jobs:
     needs: [build]
 
     runs-on: [self-hosted, linux]
+    timeout-minutes: 10
 
     steps:
       - uses: actions/checkout@v2
