--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -9,10 +9,20 @@ on:
 jobs:
   bump:
     if: "! contains(github.event.head_commit.message, '[skip ci]')"
-    uses: ./.github/workflows/bumper.yml
-    secrets: inherit
+    runs-on: ubuntu-latest
+    outputs:
+      new_tag: ${{ steps.tag_version.outputs.new_tag }}
+      new_version: ${{ steps.tag_version.outputs.new_version }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          custom_tag: ${{ github.event.inputs.tag }}
   
-  build:
+  build-for-test:
     if: "! (contains(github.event.head_commit.message, '[skip ci]') || contains(github.event.head_commit.message, '[bump]'))"
     runs-on: [self-hosted, linux]
     timeout-minutes: 5
@@ -52,7 +62,7 @@ jobs:
   test:
     if: "! (contains(github.event.head_commit.message, '[skip ci]') || contains(github.event.head_commit.message, '[no test]') || contains(github.event.head_commit.message, '[bump]'))"
 
-    needs: [build]
+    needs: [build-for-test]
 
     runs-on: [self-hosted, linux]
     timeout-minutes: 10
