--- a/.goreleaser.linux.yaml
+++ b/.goreleaser.linux.yaml
@@ -18,9 +18,14 @@ builds:
 
     goarch:
       - amd64
+      # - '386'
       - arm64
+      # - arm
+    goarm:
+      - '6'
+      - '7'
     goos:
-      - windows
+      - linux
     ldflags:
       - "-X 'github.com/slingdata-io/sling-cli/core.Version={{.Version}}'"
 
@@ -45,16 +50,3 @@ blobs:
     bucket: ocral
     folder: "slingdata.io/dist/{{.Version}}"
     region: nyc3
-
-scoop:
-  name: sling
-  bucket:
-    owner: slingdata-io
-    name: scoop-sling
-    branch: main
-  
-  url_template: "https://ocral.nyc3.digitaloceanspaces.com/slingdata.io/dist/{{ .Version }}/{{ .ArtifactName }}"
-
-  homepage: https:/slingdata.io/en/cli
-
-  description: "Data Integration made simple, from the command line. Extract and load data from popular data sources to destinations with high performance and ease."
