--- a/.goreleaser.linux.yaml
+++ b/.goreleaser.linux.yaml
@@ -19,11 +19,11 @@ builds:
     goarch:
       - amd64
       # - '386'
-      - arm64
+      # - arm64
       # - arm
-    goarm:
-      - '6'
-      - '7'
+    # goarm:
+    #   - '6'
+    #   - '7'
     goos:
       - linux
     ldflags:
