update env conns logic [no test]

--- a/core/env/default.env.yaml
+++ b/core/env/default.env.yaml
@@ -6,9 +6,6 @@ connections:
 
 
 # Global variables for specific settings, available to all connections at runtime
+# See https://docs.slingdata.io/sling-cloud/self-hosted-workers for workers in Self-Hosted mode with Sling Cloud
 # variables:
 
-
-# For workers in Self-Hosted mode with Sling Cloud
-# See https://docs.slingdata.io/sling-cloud/self-hosted-workers
-# worker:
