--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: "1.19"
+          cache: true
           
       # - uses: actions/cache@v3
       #   with:
@@ -74,6 +75,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: "1.19"
+          cache: true
           
       # - uses: actions/cache@v3
       #   with:
