fix cache [no test]

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: "1.19"
-          cache: true
+          cache: false
           
       # - uses: actions/cache@v3
       #   with:
@@ -75,7 +75,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: "1.19"
-          cache: true
+          cache: false
           
       # - uses: actions/cache@v3
       #   with:
