update test-sling-action [no test]

--- a/.github/workflows/test-sling-action.yml
+++ b/.github/workflows/test-sling-action.yml
@@ -9,15 +9,17 @@ jobs:
     timeout-minutes: 5
     env:
       TEST_PG_SLING_MASTER: ${{ secrets.TEST_PG_SLING_MASTER }}
-      DEMO_POSTGRES: ${{ secrets.DEMO_POSTGRES }}
+      SQLITE: ${{ secrets.SQLITE }}
 
     steps:
+      - uses: actions/checkout@v2
+        
       - name: List Connections
-        uses: slingdata-io/sling-action@v2
+        uses: slingdata-io/sling-action
         with:
           command: conns list
         
       - name: Run Replication
-        uses: slingdata-io/sling-action@v2
+        uses: slingdata-io/sling-action
         with:
           command: run -r cmd/sling/tests/replications/r.01.yaml
