add Set Path [no test]

--- a/.github/workflows/release-scoop.yml
+++ b/.github/workflows/release-scoop.yml
@@ -27,6 +27,10 @@ jobs:
             minimum-size: 16GB
             maximum-size: 16GB
             disk-root: "C:"
+      - name: Set Path
+        run: |
+          $env:GITHUB_PATH = "C:\__\programs\TDM-GCC-64\bin;" + $env:GITHUB_PATH
+          echo $env:GITHUB_PATH
 
       - name: Run GoReleaser
         # uses: flarco/goreleaser-action@master
