--- a/.github/workflows/release-scoop.yml
+++ b/.github/workflows/release-scoop.yml
@@ -28,12 +28,44 @@ jobs:
             maximum-size: 16GB
             disk-root: "C:"
 
-      - uses: msys2/setup-msys2@v2
+      ######################################
+
+      - uses: actions/setup-python@v2
         with:
-          msystem: MINGW64
-          update: true
-          install: git mingw-w64-x86_64-toolchain mingw-w64-x86_64-cmake mingw-w64-x86_64-ninja git
-       # see here: https://gist.github.com/scivision/1de4fd6abea9ba6b2d87dc1e86b5d2ce
+          python-version: '3.7'
+
+      - name: Build
+        shell: bash
+        run: |
+          python scripts/ci/windows_ci.py
+          
+          go mod edit -dropreplace='github.com/flarco/g' go.mod
+          go mod edit -dropreplace='github.com/flarco/dbio' go.mod
+          go mod tidy
+
+          # export CGO_CPPFLAGS='-DCMAKE_BUILD_TYPE=Release -DBUILD_PARQUET_EXTENSION=1'
+          go build -o sling-win.exe github.com/slingdata-io/sling-cli/cmd/sling
+
+      # - uses: msys2/setup-msys2@v2
+      #   with:
+      #     msystem: MINGW64
+      #     update: true
+      #     install: git mingw-w64-x86_64-toolchain mingw-w64-x86_64-cmake mingw-w64-x86_64-ninja git
+
+      # - name: Put MSYS2_MinGW64 on PATH
+      #   # there is not yet an environment variable for this path from msys2/setup-msys2
+      #   shell: msys2 {0}
+      #   run: export PATH=D:/a/_temp/msys/msys64/mingw64/bin:$PATH
+
+      # - name: Build Sling (Windows)
+      #   shell: msys2 {0}
+      #   run: |
+      #     go mod edit -dropreplace='github.com/flarco/g' go.mod
+      #     go mod edit -dropreplace='github.com/flarco/dbio' go.mod
+      #     go mod tidy
+
+      #     # export CGO_CPPFLAGS='-DCMAKE_BUILD_TYPE=Release -DBUILD_PARQUET_EXTENSION=1'
+      #     go build -o sling-win.exe github.com/slingdata-io/sling-cli/cmd/sling
       
       # - name: Set Path
       #   run: |
@@ -44,21 +76,6 @@ jobs:
 
       #     cat $env:GITHUB_PATH
       #     get-command cc1plus
-
-      - name: Put MSYS2_MinGW64 on PATH
-        # there is not yet an environment variable for this path from msys2/setup-msys2
-        shell: msys2 {0}
-        run: export PATH=D:/a/_temp/msys/msys64/mingw64/bin:$PATH
-
-      - name: Build Sling (Windows)
-        shell: msys2 {0}
-        run: |
-          go mod edit -dropreplace='github.com/flarco/g' go.mod
-          go mod edit -dropreplace='github.com/flarco/dbio' go.mod
-          go mod tidy
-
-          # export CGO_CPPFLAGS='-DCMAKE_BUILD_TYPE=Release -DBUILD_PARQUET_EXTENSION=1'
-          go build -o sling-win.exe github.com/slingdata-io/sling-cli/cmd/sling
 
       # - name: Run GoReleaser
       #   # uses: flarco/goreleaser-action@master
