update Run Go Tests

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -88,7 +88,7 @@ jobs:
         env:
           ENVKEY: ${{ secrets.ENVKEY }}
         run: |
-          /__/bin/envkey-source -f --dot-env > .env
-          sed -i "s/_DEBUG='TRUE'/_DEBUG=''/g" .env
+          /__/bin/envkey-source -f > .env.sh
+          sed -i "s/_DEBUG='TRUE'/_DEBUG=''/g" .env.sh
           
-          docker run --rm --env-file .env -v /__/docker-data/devbox/root/go:/root/go -v /__:/__ -v /tmp:/tmp -v $PWD:/work --workdir /work flarco/devbox:base bash -c "bash scripts/prep.gomod.sh && bash scripts/test.sh"
+          docker run --rm -v /__/docker-data/devbox/root/go:/root/go -v /__:/__ -v /tmp:/tmp -v $PWD:/work --workdir /work flarco/devbox:base bash -c "source .env.sh && bash scripts/prep.gomod.sh && bash scripts/test.sh"
