--- a/cmd/sling/tests/replications/r.05.yaml
+++ b/cmd/sling/tests/replications/r.05.yaml
@@ -8,30 +8,15 @@ defaults:
   mode: full-refresh
 
 streams:
-  s3://ocral/MLOps.community.test/mlops-questions-answered/:
-  s3://ocral/MLOps.community.test/mlops-special-project-berlin/:
-  s3://ocral/MLOps.community.test/channels.json:
-  s3://ocral/MLOps.community.test/integration_logs.json:
-  s3://ocral/MLOps.community.test/users.json:
-  s3://ocral/MLOps.community.test/be-shameless/:
-  s3://ocral/MLOps.community.test/colorado/:
-  s3://ocral/MLOps.community.test/content-archive/:
-  s3://ocral/MLOps.community.test/discussions/:
-  s3://ocral/MLOps.community.test/evangelism/:
-  s3://ocral/MLOps.community.test/events/:
-  s3://ocral/MLOps.community.test/fiddler/:
-  s3://ocral/MLOps.community.test/gcp/:
-  s3://ocral/MLOps.community.test/gen-ai/:
-  s3://ocral/MLOps.community.test/general/:
-  s3://ocral/MLOps.community.test/introduce-yourself/:
-  s3://ocral/MLOps.community.test/jobs/:
-  s3://ocral/MLOps.community.test/leadership/:
-  s3://ocral/MLOps.community.test/london/:
-  s3://ocral/MLOps.community.test/luxembourg/:
-  s3://ocral/MLOps.community.test/mlops-alerts/:
-  s3://ocral/MLOps.community.test/mlops-stacks/:
-  s3://ocral/MLOps.community.test/neptune-ai/:
-  s3://ocral/MLOps.community.test/nlp/:
-  s3://ocral/MLOps.community.test/random/:
-  s3://ocral/MLOps.community.test/washington-dc-the-capital/:
-  s3://ocral/MLOps.community.test/women-of-mlops/:
+  s3://ocral/mlo.community.test/channels.json:
+  s3://ocral/mlo.community.test/integration_logs.json:
+  s3://ocral/mlo.community.test/users.json:
+  s3://ocral/mlo.community.test/be-shameless/:
+  s3://ocral/mlo.community.test/content-archive/:
+  s3://ocral/mlo.community.test/discussions/:
+  s3://ocral/mlo.community.test/events/:
+  s3://ocral/mlo.community.test/fiddler/:
+  s3://ocral/mlo.community.test/general/:
+  s3://ocral/mlo.community.test/jobs/:
+  s3://ocral/mlo.community.test/leadership/:
+  s3://ocral/mlo.community.test/random/:
