--- a/.goreleaser.linux.yaml
+++ b/.goreleaser.linux.yaml
@@ -43,6 +43,12 @@ snapshot:
 checksum:
   name_template: '{{ .Runtime.Goos }}.{{ .Runtime.Goarch }}.checksums.txt'
 
+dockers:
+  - dockerfile: 'cmd/sling/Dockerfile'
+    image_templates:
+    - "slingdata/sling:latest"
+    - "slingdata/sling:{{ .Tag }}"
+
 # mc policy set public DO/ocral/slingdata.io/cli
 blobs:
   - provider: s3
