--- a/.goreleaser.mac.yaml
+++ b/.goreleaser.mac.yaml
@@ -58,8 +58,6 @@ brews:
       owner: slingdata-io
       name: homebrew-sling
       branch: main
-    
-    url_template: "https://ocral.nyc3.digitaloceanspaces.com/slingdata.io/dist/{{ .Version }}/{{ .ArtifactName }}"
 
-    homepage: https:/slingdata.io/en/cli
+    homepage: https:/slingdata.io/
     description: "Data Integration made simple, from the command line. Extract and load data from popular data sources to destinations with high performance and ease."
