--- a/.goreleaser.windows.yaml
+++ b/.goreleaser.windows.yaml
@@ -52,9 +52,7 @@ scoop:
     owner: slingdata-io
     name: scoop-sling
     branch: main
-  
-  url_template: "https://ocral.nyc3.digitaloceanspaces.com/slingdata.io/dist/{{ .Version }}/{{ .ArtifactName }}"
 
-  homepage: https:/slingdata.io/en/cli
+  homepage: https:/slingdata.io/
 
   description: "Data Integration made simple, from the command line. Extract and load data from popular data sources to destinations with high performance and ease."
