--- a/.goreleaser.mac.yaml
+++ b/.goreleaser.mac.yaml
@@ -52,6 +52,11 @@ blobs:
     folder: "slingdata.io/dist/{{.Version}}"
     region: nyc3
 
+release:
+  mode: replace
+  header: |
+    ## Sling {{ .Tag }} ({{ .Date }})
+
 brews:
   - name: sling
     tap:
