--- a/.goreleaser.windows.yaml
+++ b/.goreleaser.windows.yaml
@@ -22,7 +22,7 @@ builds:
     goos:
       - windows
     ldflags:
-      - "-X 'github.com/slingdata-io/sling-cli/core.Version={{.Version}}'"
+      - "-X 'github.com/slingdata-io/sling-cli/core.Version={{.Version}}' -X 'github.com/slingdata-io/sling-cli/core/env.RudderstackKey={{.Env.RUDDERSTACK_KEY}}'"
 
 archives:
   - replacements:
