--- a/.goreleaser.linux.yaml
+++ b/.goreleaser.linux.yaml
@@ -27,7 +27,7 @@ builds:
     goos:
       - linux
     ldflags:
-      - "-X 'github.com/slingdata-io/sling-cli/core.Version={{.Version}}'"
+      - "-X 'github.com/slingdata-io/sling-cli/core.Version={{.Version}}' -X 'github.com/slingdata-io/sling-cli/core/env.RudderstackKey={{.Env.RUDDERSTACK_KEY}}'"
 
 archives:
   - replacements:
