--- a/.goreleaser.mac.yaml
+++ b/.goreleaser.mac.yaml
@@ -24,7 +24,7 @@ builds:
       # - windows
       - darwin
     ldflags:
-      - "-X 'github.com/slingdata-io/sling-cli/core.Version={{.Version}}'"
+      - "-X 'github.com/slingdata-io/sling-cli/core.Version={{.Version}}' -X 'github.com/slingdata-io/sling-cli/core/env.RudderstackKey={{.Env.RUDDERSTACK_KEY}}'"
 
 universal_binaries:
   - id: sling
