--- a/.goreleaser.mac.yaml
+++ b/.goreleaser.mac.yaml
@@ -24,7 +24,7 @@ builds:
       # - windows
       - darwin
     ldflags:
-      - "-X 'github.com/slingdata-io/sling-cli/core.Version={{.Version}}'"
+      - "-X 'github.com/slingdata-io/sling-cli/core.Version={{.Version}}' -X 'github.com/slingdata-io/sling-cli/core/env.RudderstackKey={{.Env.RUDDERSTACK_KEY}}'"
 
 universal_binaries:
   - id: sling
@@ -52,14 +52,17 @@ blobs:
     folder: "slingdata.io/dist/{{.Version}}"
     region: nyc3
 
+release:
+  mode: replace
+  header: |
+    ## Sling {{ .Tag }} ({{ .Date }})
+
 brews:
   - name: sling
     tap:
       owner: slingdata-io
       name: homebrew-sling
       branch: main
-    
-    url_template: "https://ocral.nyc3.digitaloceanspaces.com/slingdata.io/dist/{{ .Version }}/{{ .ArtifactName }}"
 
-    homepage: https:/slingdata.io/en/cli
+    homepage: https:/slingdata.io/
     description: "Data Integration made simple, from the command line. Extract and load data from popular data sources to destinations with high performance and ease."
