--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -7,6 +7,11 @@ on:
         description: 'build_only: "true" or empty'     
         required: false
 
+env:
+  GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.DO_SPACE_ACCESS_KEY}}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.DO_SPACE_SECRET_KEY}}
+
 jobs:
   build:
     runs-on: [self-hosted, linux]
@@ -59,40 +64,6 @@ jobs:
           VERSION=$(/__/bin/sling --version | sed 's/Version: //')
           echo ::set-output name=version::$VERSION
 
-  push:
-    if: "! (contains(github.event.inputs.build_only, 'true'))"
-    needs: [build]
-    runs-on: [self-hosted, Linux]
-    
-    steps:
-      - name: Set up GoLang
-        uses: actions/setup-go@v3
-        with:
-          go-version: "1.19"
-          cache: false
-          
-      # - uses: actions/cache@v3
-      #   with:
-      #     path: ~/go/pkg/mod
-      #     key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-go-
-      
-      - name: Push Docker
-        run: |
-          /bin/cp /__/bin/sling ./sling
-          VERSION=$(./sling --version | sed 's/Version: //')
-
-          source /__/devbox/.env.sh
-          export _DEBUG=''
-          echo "$DOCKER_PASSWORD!" | docker login -u slingdata --password-stdin
-
-          docker build -t slingdata/sling:$VERSION -f cmd/sling/Dockerfile .
-          docker tag slingdata/sling:$VERSION slingdata/sling:latest
-          docker push slingdata/sling:$VERSION
-          docker push slingdata/sling:latest
-          docker image rm -f slingdata/sling:$VERSION
-
   release:
     if: "! (contains(github.event.inputs.build_only, 'true'))"
     needs: [build]
@@ -129,13 +100,6 @@ jobs:
         with:
           go-version: "1.19"
           cache: true
-          
-      # - uses: actions/cache@v2
-      #   with:
-      #     path: ~/go/pkg/mod
-      #     key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-go-
 
       - name: Build Sling (Linux)
         env:
@@ -163,16 +127,6 @@ jobs:
           VERSION: ${{ needs.build.outputs.VERSION }}
         if: runner.os == 'windows'
         run: .\scripts\ci\build.win.ps1 $env:VERSION
-
-      # - name: Release Binaries to Github
-      #   uses: "marvinpinto/action-automatic-releases@latest"
-      #   with:
-      #     repo_token: "${{ secrets.GITHUB_TOKEN }}"
-      #     automatic_release_tag: "latest-${{ runner.os }}"
-      #     prerelease: true
-      #     title: "Latest: ${{ runner.os }}"
-      #     files: |
-      #       sling*
       
       - uses: BetaHuhn/do-spaces-action@v2
         with:
@@ -221,10 +175,6 @@ jobs:
           distribution: goreleaser
           version: latest
           args: release --rm-dist --skip-validate -f .goreleaser.mac.yaml
-        env:
-          GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.DO_SPACE_ACCESS_KEY}}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.DO_SPACE_SECRET_KEY}}
 
   release-scoop:
     # runs-on: [self-hosted, Windows]
@@ -257,10 +207,6 @@ jobs:
           distribution: goreleaser
           version: latest
           args: release --rm-dist --skip-validate -f .goreleaser.windows.yaml
-        env:
-          GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.DO_SPACE_ACCESS_KEY}}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.DO_SPACE_SECRET_KEY}}
 
   release-linux:
     runs-on: ubuntu-latest
@@ -279,6 +225,12 @@ jobs:
           go-version: "1.19"
           cache: true
 
+      - name: Login docker
+        env:
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          echo "$DOCKER_PASSWORD" | docker login -u slingdata --password-stdin
+
       - name: Run GoReleaser
         # uses: flarco/goreleaser-action@master
         uses: goreleaser/goreleaser-action@v3
@@ -286,7 +238,3 @@ jobs:
           distribution: goreleaser
           version: latest
           args: release --rm-dist --skip-validate -f .goreleaser.linux.yaml
-        env:
-          GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.DO_SPACE_ACCESS_KEY}}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.DO_SPACE_SECRET_KEY}}
