fix test-sling-action typo [no test]

--- a/.github/workflows/test-sling-action.yml
+++ b/.github/workflows/test-sling-action.yml
@@ -1,7 +1,7 @@
 name: Test Sling Action
 
 on:
-  workflow_dispatch:on:
+  workflow_dispatch:
   repository_dispatch:
     types: [test-sling-action]
 
