--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -60,7 +60,7 @@ jobs:
           echo "REF_NAME -> $REF_NAME"
 
           bash scripts/prep.gomod.sh
-          bash scripts/build.linux.sh $VERSION
+          bash scripts/build.test.sh $VERSION
 
   test:
     if: "! (contains(github.event.head_commit.message, '[skip ci]') || contains(github.event.head_commit.message, '[no test]') || contains(github.event.head_commit.message, '[nt]') || contains(github.event.head_commit.message, '[bump]'))"
