update goreleaser [nt]

--- a/.goreleaser.linux.yaml
+++ b/.goreleaser.linux.yaml
@@ -32,6 +32,10 @@ builds:
 snapshot:
   name_template: "{{ incpatch .Version }}"
 
+
+archives:
+  - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ with .Arm }}v{{ . }}{{ end }}{{ with .Mips }}_{{ . }}{{ end }}{{ if not (eq .Amd64 "v1") }}{{ .Amd64 }}{{ end }}'
+
 checksum:
   name_template: '{{ .Runtime.Goos }}.{{ .Runtime.Goarch }}.checksums.txt'
 
