--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,4 +1,4 @@
-name: Bump, Build & Test
+name: Build & Test
 
 on: 
   workflow_dispatch:
@@ -9,26 +9,10 @@ on:
         - main
 
 jobs:
-  bump:
-    if: "! contains(github.event.head_commit.message, '[skip ci]')"
-    runs-on: ubuntu-latest
-    outputs:
-      new_tag: ${{ steps.tag_version.outputs.new_tag }}
-      new_version: ${{ steps.tag_version.outputs.new_version }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: ${{ github.event.inputs.tag }}
-  
   build-for-test:
     if: "! (contains(github.event.head_commit.message, '[skip ci]') || contains(github.event.head_commit.message, '[bump]'))"
     runs-on: [self-hosted, linux]
     timeout-minutes: 15
-    needs: [bump]
 
     steps:
       - uses: actions/checkout@v2
