update test replications

--- a/cmd/sling/tests/replications/r.11.yaml
+++ b/cmd/sling/tests/replications/r.11.yaml
@@ -3,7 +3,7 @@ target: aws_s3
 
 defaults:
   mode: full-refresh
-  object: 'test1k/{YEAR}'
+  object: 'test/{stream_schema}.{stream_table}'
   target_options:
     file_max_rows: 1000000 # multiple files
     compression: gzip
@@ -13,7 +13,11 @@ streams:
     sql: |
       select * from public.test1k
       where date_trunc('year', create_date) = '{YEAR}-01-01'
-    
+    object: 'test1k/{YEAR}'
+  
+  public.accounts:
+  public.plans:
+
 env:
   # pass in env vars, e.g. YEAR=2005
   YEAR: $YEAR
